Fixed overlapping header CSS

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ header#header {
 	text-align: center;
 	position: fixed;
 	top: 0; left: 0;
-	height: 300px;
 	width: 100%;
 }
 
@@ -28,4 +27,8 @@ header#header h1 {
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.25);
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.25);
 	box-shadow: 0 0 5px rgba(0,0,0,0.25);
+}
+
+@media (min-width: 1280px) {
+	#main { margin-top: 300px; }
 }
